# rklog-cpp

./: .gitignore  CMakeLists.txt  Makefile  README.md  compile_flags.txt  test.cpp
core/: logger.hpp
include/rklog/: rklog.hpp
include/rklog/Config/: Color.hpp  Config.hpp  Level.hpp  Style.hpp
include/rklog/Core/: Platform.hpp  Time.hpp
include/rklog/Logger/: BasicLogger.hpp  ColorLogger.hpp  FileLogger.hpp  Logger.hpp
include/rklog/config/: color.hpp  config.hpp  level.hpp  style.hpp
include/rklog/core/: level.hpp  logger.hpp  platform.hpp  style.hpp  time.hpp
include/rklog/logger/: BasicLogger.hpp  ColorLogger.hpp  FileLogger.hpp  console_logger.hpp  file_logger.hpp  global_logger.hpp  logger.hpp
rklog/: config.hpp  level.hpp  logger.hpp  platform.hpp  rklog.cpp  rklog.hpp  style.hpp  time.hpp
rklog/core/: config.hpp  logger.hpp  style.hpp  time.hpp
src/: LogImpl.cpp  console_logger.cpp  file_logger.cpp  global_logger.cpp  logger.cpp  rklog.cpp
